[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2.4.3"
tokio = { version = "1.52.3", features = ["full"] }
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSWorkspace"] }
objc2-foundation = "0.3.2"
block2 = "0.6.2"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["test-util", "macros", "time"] }
