[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2.4.3"
tokio = { version = "1.52.3", features = ["full"] }
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "NSWorkspace",
    "NSRunningApplication",
    "libc",
] }
objc2-foundation = "0.3.2"
block2 = "0.6.2"
# AX API（AXUIElement / AXIsProcessTrusted）バインディング。
# libc feature は AXUIElementCreateApplication(pid_t) 等の pid 型に必要
objc2-application-services = { version = "0.3.2", features = ["libc"] }
libc = "0.2"
# アイコン PNG の base64 エンコード（iconUpdate ペイロード / FS キャッシュ読み出し）
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["test-util", "macros", "time"] }
